# python-template

./: .gitignore  README.md  api.rst  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst  readme.rst
src/: __init__.py  main.py  sample.py
tests/: test_sample.py
