[tool.poetry]
name = "sample"
version = "0.0.0"
description = "A template for python projects."
authors = ["jfxio <34043999+jfxio@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
sample = "main:run"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
pyright = "^1.1.320"
sphinx = "^7.1.2"
black = "^23.7.0"
furo = "^2023.7.26"
ruff = "^0.0.282"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-versions = ["py311"]
skip-string-normalization = "true"

[tool.ruff]
line-length = 79
select = [
    "ALL",
    # ca 2020-08-08: there is no way to enable D213
    "D213",     # multi-line-summary-second-line
]
ignore = [
    "ANN101",   # missing-type-self
    "D212",     # multi-line-summary-first-line
    "T201",     # print
    "T203",     # p-print
    "TD",       # flake-8-todos
    "FIX",      # flake-8-fixme
]
exclude = ["docs/**"]

[tool.ruff.per-file-ignores]
# Reduce the doc requirements for tests
"tests/**" = [
    "D100",     # undocumented-public-module
    "D103",     # undocumented-public-function
    "S101",     # assert
    "PLR2004",  # magic-value-comparison
]
"__init__.py" = [
    "D104",
]

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pylint]
max-args=6 # For suit stirngs (self + name + 4 suits)
