[project]
name = "sample"
version = "0.0.0"
description = "A template for python projects."
authors = [
    { name="J Frisbie", email = "<34043999+jfxio@users.noreply.github.com>" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[project.scripts]
sample = "main:run"

[dependency-groups]
dev = [
    "pytest >=7.4.0",
    "coverage >=7.2.7",
    "pyright >=1.1.320",
    "sphinx >=7.1.2",
    "black >=23.7.0",
    "furo >=2023.7.26",
    "ruff >=0.0.282",
    "myst-parser >=2.0.0"
]

[build-system]
requires = ["poetry-core >=2.3"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py313"]
skip-string-normalization = true

[tool.ruff]
# ruff "top-level" config (ie for both linter & formatter
line-length = 79
exclude = ["docs/**"]

[tool.ruff.lint]
select = [
    "ALL",
    # ca 2020-08-08: there is no way to enable D213
    "D213",     # multi-line-summary-second-line
]
ignore = [
    "D212",     # multi-line-summary-first-line
    "T201",     # print
    "T203",     # p-print
    "TD",       # flake-8-todos
    "FIX",      # flake-8-fixme
]
[tool.ruff.lint.per-file-ignores]
# Reduce the doc requirements for tests
"tests/**" = [
    "D100",     # undocumented-public-module
    "D103",     # undocumented-public-function
    "S101",     # assert
    "PLR2004",  # magic-value-comparison
]
"__init__.py" = [
    "D104",
]



[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"
